# Discord_Music_Bot

./: .gitignore  .replit  key.env  main.py  music.py  pyproject.toml  replit.nix  requirements.txt
opus/: libopus.so.0.8.0  opus_demo  repacketizer_demo
opus-1.3.1/: Makefile  config.status  libopus.la  libtool  opus_compare  opus_demo  repacketizer_demo
opus-1.3.1/celt/: bands.lo  celt.lo  celt_decoder.lo  celt_encoder.lo  celt_lpc.lo  cwrs.lo  entcode.lo  entdec.lo  entenc.lo  kiss_fft.lo  laplace.lo  mathops.lo  mdct.lo  modes.lo  pitch.lo  quant_bands.lo  rate.lo  vq.lo
opus-1.3.1/celt/.deps/: vq.Plo  (+17 more)
opus-1.3.1/doc/: Makefile
opus-1.3.1/silk/: A2NLSF.lo  CNG.lo  HP_variable_cutoff.lo  LPC_analysis_filter.lo  LPC_fit.lo  LPC_inv_pred_gain.lo  LP_variable_cutoff.lo  NLSF2A.lo  NLSF_VQ.lo  NLSF_VQ_weights_laroia.lo  NLSF_decode.lo  NLSF_del_dec_quant.lo  NLSF_encode.lo  NLSF_stabilize.lo  NLSF_unpack.lo  NSQ.lo  NSQ_del_dec.lo  PLC.lo  VAD.lo  VQ_WMat_EC.lo  ana_filt_bank_1.lo  biquad_alt.lo  bwexpander.lo  bwexpander_32.lo  check_control_input.lo  code_signs.lo  control_SNR.lo  control_audio_bandwidth.lo  control_codec.lo  debug.lo  dec_API.lo  decode_core.lo  decode_frame.lo  decode_indices.lo  decode_parameters.lo  decode_pitch.lo  decode_pulses.lo  decoder_set_fs.lo  enc_API.lo  encode_indices.lo  (+37 more)
opus-1.3.1/src/: analysis.lo  mapping_matrix.lo  mlp.lo  mlp_data.lo  opus.lo  opus_decoder.lo  opus_encoder.lo  opus_multistream.lo  opus_multistream_decoder.lo  opus_multistream_encoder.lo  opus_projection_decoder.lo  opus_projection_encoder.lo  repacketizer.lo
(+206 files in other folders)
