[tool.poetry]
name = "repl_nix_DiscordMusicBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
youtube_dl = "^2021.12.17"
discord = "^2.2.2"
Flask = "^2.2.3"
discord-py = "^2.5.2"
yt-dlp = "^2025.3.31"
lyricsgenius = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
